--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,10 @@ spring:
           starttls:
             enable: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/sreerastuDb
+#    url: jdbc:postgresql://localhost:5432/sreerastuDb
+    url: jdbc:postgresql://postgresdb.cu0ghcs3xhjo.us-east-1.rds.amazonaws.com:5432/sreerastuDb
     username: postgres
-    password: root
+    password: Headway123
   jpa:
     properties:
       hibernate:
