--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     port: 587
     protocol: smtp
     username: devisaikotari@gmail.com
-    password: liqiodrybarvgjpx
+    password: toqqybbrwtpzfovq
     properties:
       mail:
         smtp:
@@ -23,12 +23,12 @@ spring:
             enable: true
   datasource:
     url: jdbc:postgresql://localhost:5432/sreerastuDb
-#    url: jdbc:postgresql://postgresdb.cu0ghcs3xhjo.us-east-1.rds.amazonaws.com:5432/sreerastuDb
+    #    url: jdbc:postgresql://postgresdb.cu0ghcs3xhjo.us-east-1.rds.amazonaws.com:5432/sreerastuDb
 
     username: postgres
-#    password: Headway123
+    #    password: Headway123
     password: root
-  jpa: 
+  jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
